<resources>
    <string name="app_name">A2L3_Weather</string>

    <string name="cityStr">City</string>

    <string name="humidity">Humidity</string>
    <string name="humidityDimension">%</string>

    <string name="pressure">Pressure</string>
    <string name="pressureDimension">mm Hg</string>

    <string name="windSpeed">Wind speed</string>
    <string name="windSpeedDimension">m/s</string>

    <string name="temperature">Temperature</string>

    <string name="celsiusDimension">&#8451;</string>

    <string name="empty_list">List is empty</string>

    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="geekbrains_university">GeekBrains university</string>
    <string name="student">Student: Leonov EA</string>
    <string name="fahrenheitDimension">F</string>
    <string name="ok">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dateSrt">Updated</string>

    <string name="place_not_found">Place not found</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="error">Error</string>
    <string name="menu_add">Add</string>
    <string name="menu_change">Change</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_desc">Weather desc</string>
    <string name="nav_header_subtitle">GeekBrains A2 course</string>
    <string name="menu_city">City</string>
    <string name="SomeWrong">Something went wrong!</string>
    <string name="android_advanced_course">Android Advanced</string>
    <string name="add_city">Add city</string>
    <string name="CurrentsValues">Current values</string>

    <string name="enterName">Type your name here</string>
    <string name="enterEMail">Type your e-mail here</string>
    <string name="enterFeedback">Type your feedback here</string>
    <string name="send">Send</string>
    <string name="menu_feedback">Feedback</string>
    <string name="Moscow">Moscow</string>
    <string name="pleaseWait">Loading, please wait…</string>

</resources>
