<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_change" />
        <item
            android:id="@+id/nav_remove"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/menu_remove" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
