<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_change"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_remove_circle_outline_black_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_remove"
        app:showAsAction="never" />
</menu>
