<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FeedBackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.AboutFragment">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEMail"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etFeedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterFeedback"
            android:inputType="textMultiLine"
            android:lines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEMail"
            tools:ignore="Autofill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFeedback" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>